# HellTech-Engine

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CNAME  CommonBuildSheet.props  DEFS_WIN32_NO_BS.h  HellTech.sln  QiY.sln  QiY.vcxproj  QiY.vcxproj.filters  README.md  asset_compiler.cpp  asset_compiler.h  asset_pipe_vk.cpp  bcn_compressor.cpp  bcn_compressor.h  core_lib_api.h  core_mem.cpp  core_types.h  directx_math.hpp  diy_pch.h  dxc.cpp  dxc.hpp  dxc_compile_shaders.py  eastl_new.cpp  fast_obj.h  filesystem.ixx  geometry.hpp  get_3rdparty_deps.bat  get_miniz.bat  handle_map.cpp  handle_map.hpp  handle_map.inl  handles.hpp  handles.ixx  hell_log.hpp  helltech.cpp  helltech.hpp  (+69 more)
.claude/: codebase_map.md  settings.local.json
AssetCompiler/: asset_compiler.cpp  asset_compiler.h  texture_compressor.cpp  texture_compressor.h
Cmake/: debug_msvc.cmake  toolchain_msvc.cmake
Engine/: CMakeLists.txt  Engine.vcxproj  Engine.vcxproj.filters  HellTech.cpp  dxc.cpp  dxc.h  eastl_new.cpp  engine_platform_common.h  engine_types.h  ht_bitset.h  ht_error.h  ht_mem_arena.h  ht_mtx_queue.h  ht_slot_buffer.h  ht_stable_stretchy_buffer.h  ht_stretchy_buffer.h  im_gui.h  r_data_structs.h  r_dx12_backend.cpp  renderer.cpp  spirv_reflect.c  sys_os_api.h  sys_os_win.cpp  vk_backend.cpp  vk_command_buffer.h  vk_context.h  vk_error.h  vk_pso.h  vk_resources.h  vk_sync.h  vk_types.h  vk_utils.h
Engine/System/: sys_file.h  sys_mem_arena.h  sys_sync.h  sys_thread.h
Engine/System/Win32/: win32.cpp  win32_err.h  win32_file.cpp  win32_kbd_scancodes.h
HellPack/: CMakeLists.txt  HellPack.cpp  HellPack.vcxproj  HellPack.vcxproj.filters  core_types.h  gltf_loader.h  hell_pack.h  hp_bcn_compression.h  hp_bvh.h  hp_bvh_builder.h  hp_encoding.h  hp_error.h  hp_material.h  hp_math.h  hp_mesh.h  hp_serialization.h  hp_types_internal.h  mikkt_space.h  range_utils.h  zip_pack.h
HtLib/: CMakeLists.txt  ht_core_types.h  ht_file.h  ht_fixed_string.h  ht_fixed_vector.h  ht_macros.h  ht_mem_arena.h  ht_slot_buffer.h  ht_slot_vector.h  ht_stretchybuff.h  ht_utils.h
HtLib/Linux/: linux_impl.cpp
HtLib/Tests/: TestSlotBuffer.vcxproj  TestStretchyBuffer.vcxproj  Tests.props  Tests.vcxproj  test_mem_arena.cpp  test_slot_buffer.cpp  test_stretchy_buffer.cpp
HtLib/Win32/: win32_impl.cpp
Lib/: DEFS_WIN32_NO_BS.h  Lib.vcxitems  core_types.h  hell_pack.h  ht_bitset.h  ht_error.h  ht_fixed_string.h  ht_geometry.h  ht_gfx_types.h  ht_math.h  ht_renderer_types.h  ht_utils.h  ht_vec_types.h  range_utils.h  zip_pack.h
Shaders/: avg_luminance.comp.glsl  bindless.hlsli  box_debug.vert.glsl  box_meshlet_draw.vert.glsl  c_avg_luminance.hlsl  c_draw_cull.comp.glsl  c_draw_cull.hlsl  c_expand_draws.comp.hlsl  c_id_expander.comp.glsl  c_indirect_dispatcher.hlsl  c_init_resources.comp.glsl  c_lambertian_clay.hlsl  c_meshlet_cull.comp.glsl  c_meshlet_issue_draws.comp.hlsl  c_pow2_downsampler.hlsl  c_record_dbd_draw.hlsl  c_tonemapping_gamma.hlsl  c_vbuffer_dbg_draw.hlsl  clear_data.hlsl  cluster_cull.comp.glsl  comp_expand_merge.comp.glsl  culling.h  culling.hlsl  dbg_vs_box.hlsl  depth_pyramid.comp.glsl  draw_cull.comp.glsl  f_col_pass.hlsl  f_light_cull.frag.glsl  f_pass_col.frag.glsl  f_vbuffer.hlsl  glsl_func_lib.h  ht_hlsl_lang.h  ht_hlsl_math.h  id_expander.comp.glsl  imgui.hlsl  imgui_frag.hlsl  imgui_gfx.hlsl  imgui_gfx_lib.hlsl  imgui_vert.hlsl  meshlet.vert.glsl  (+19 more)
System/: sys_file.h  sys_filesystem.hpp  sys_input.hpp  sys_platform.hpp
System/Win32/: win32_err.h  win32_file.cpp  win32_main.cpp  win32_platform.cpp  win32_platform.hpp  win32_utils.h  win32_utils.hpp
Tests/: Tests.vcxproj  test_common.h  test_mem_arena.cpp  test_stretchy_buffer.cpp
Vulkan/: vk_backend.cpp  vk_backend.hpp  vk_commands.hpp  vk_common.hpp  vk_descriptors.hpp  vk_device.cpp  vk_device.hpp  vk_frame_graph.hpp  vk_instance.hpp  vk_pipelines.hpp  vk_queue.hpp  vk_resources.hpp  vk_shaders.hpp  vk_sync.hpp  vk_utils.hpp
Win32/: win32_impl.cpp
src/: ht_error.h  ht_geometry.h  ht_math.h  ht_utils.h  r_data_structs.h  r_vk_backend.cpp  sys_os_win.cpp  vk_descriptor.h  vk_device.h  vk_error.h  vk_resources.h  vk_timer.h
src/AssetCompiler/: asset_compiler.cpp  asset_compiler.h  bcn_compressor.cpp  bcn_compressor.h  encoding.h  spng.c  texture_compressor.h
src/Shaders/: box_meshlet_draw.vert.glsl  c_draw_cull.comp.glsl  c_draw_cull.hlsl  c_meshlet_cull.comp.glsl  c_tonemapping_gamma.hlsl  culling.h  depth_pyramid.comp.glsl  pbr.frag.glsl  r_data_structs2.h  v_z_prepass.vert.glsl  vtx_merged.vert.glsl
src/System/: sys_file.h  sys_filesystem.h
src/System/Win32/: win32_err.h  win32_file.cpp
